configured DB authentication and access to urls accordiing to Role